Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -41,7 +41,7 @@ Everything you need to create world-class documentation.
   <Card title="Code samples" icon="code" href="/essentials/code">
     Add sample code to demonstrate how to use your product.
   </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
+  <Card title="Images" icon="image" iconType="duotone" color="#c71515" href="/essentials/images">
     Display images and other media.
   </Card>
   <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
